--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,4 +8,11 @@
     <a href="timeline.html">Timeline</a>
     <a href="impacts.html">Impacts</a>
     <a href="people.html">People</a>
+    <i class="fas fa-angle-down"></i>
+
+    <div class="more">
+        <a href="video.html"></a>
+        <a href="brinton.html"></a>
+        <a href="credits.html"></a>
+    </div>
 </div>
