--- a/css/common.css
+++ b/css/common.css
@@ -57,3 +57,37 @@ a:link, a:visited, a:hover, a:active {
 .nav .pages * {
     padding: 0px 10px;
 }
+
+.nav .pages > *:not(.more) {
+    z-index: 5;
+}
+
+.nav .pages .fas {
+    font-size: 22px;
+    padding: 0 15px 0 10px;
+}
+
+.nav .more {
+    position: absolute;
+    right: 0;
+    top: -100px;
+
+    transition: top 0.3s;
+    transition-delay: 0.2s;
+
+    background-color: #333;
+    
+    display: flex;
+    flex-direction: column;
+
+    height: 100px;
+    width: 150px;
+}
+
+.nav .fas:hover + .more, .nav .more:hover {
+    top: 43px;
+}
+
+.nav .more a {
+    z-index: 1000;
+}
