--- a/css/content.css
+++ b/css/content.css
@@ -1,7 +1,19 @@
 
-h1 {
+h1, h2, h3 {
     margin: 0;
+}
+
+h1 {
     font-size: 58px;
+}
+
+h2 {
+    font-size: 32px;
+}
+
+h3 {
+    margin-top: 10px;
+    font-size: 24px;
 }
 
 section {
