--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,8 +11,8 @@
     <i class="fas fa-angle-down"></i>
 
     <div class="more">
-        <a href="video.html"></a>
-        <a href="brinton.html"></a>
-        <a href="credits.html"></a>
+        <a href="video.html">Video</a>
+        <a href="brinton.html">Brinton's Model</a>
+        <a href="credits.html">Credits</a>
     </div>
 </div>
