--- a/templates/nav.html
+++ b/templates/nav.html
@@ -13,6 +13,6 @@
     <div class="more">
         <a href="video.html">Video</a>
         <a href="brinton.html">Brinton's Model</a>
-        <a href="credits.html">Credits</a>
+        <a href="sources.html">Sources</a>
     </div>
 </div>
