--- a/templates/nav.html
+++ b/templates/nav.html
@@ -4,6 +4,7 @@
     <h1>The French Revolution</h1>
 </a>
 <div class="pages">
+    <a href="overview.html">Overview</a>
     <a href="causes.html">Causes</a>
     <a href="timeline.html">Timeline</a>
     <a href="impacts.html">Impacts</a>
